# ai-assistant

./: README.md  docker-compose.yml  pnpm-lock.yaml
__tests__/api/: incidence.test.tsx
__tests__/app/: card.test.tsx  dashboard.test.tsx
ai-assistant-backend/: .env.example  .gitignore  README.md  data.py  pyproject.toml  requirements.txt
ai-assistant-backend/app/: data.py  incidence_model.py  qa_history.py  qa_model.py  rag.py  server.py
ai-assistant-backend/registros/: confluence_pages_data.json
ai-assistant-frontend/: .env  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml
ai-assistant-frontend/app/: layout.tsx  page.tsx
ai-assistant-frontend/app/chat/: layout.tsx
ai-assistant-frontend/app/hooks/: useGetChat.tsx
ai-assistant-frontend/app/signup/: page.tsx
ai-assistant-frontend/components/: confirm.tsx  dashboard.tsx  header.tsx  loading.tsx  theme.tsx
ai-assistant-frontend/types/: Chat.ts  User.ts
ai-assistant-frontend/utils/: db.js
app/: globals.css
app/chat/: page.tsx
app/login/: page.tsx
components/: card.tsx
models/: User.ts
nextjs-chatai/: .env  confluence_spaces.json  middleware.ts  package.json  pnpm-lock.yaml
nextjs-chatai/app/: Providers.tsx  layout.tsx  page.tsx
nextjs-chatai/components/: alerta.tsx  chat.tsx  dashboard.tsx  header.tsx  incidence.tsx  showIncidences.tsx
nextjs-chatai/lib/: order.ts
nextjs-chatai/libs/: db.ts
nextjs-chatai/models/: Chat.ts  Incidence.ts  User.ts
nextjs-chatai/types/: Chat.ts  Incidence.ts  User.ts
nextjs-chatai/utils/: db.js
utils/: db.js
(+67 files in other folders)
